--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.4.2",
     "next-themes": "^0.4.4",
     "path": "^0.12.7",
     "react": "^19.0.0",
